# agentic-journal-agent

./: .gitignore  pyproject.toml
commons/: README.md  __init__.py
commons/human/: __init__.py  console.py  mock.py
commons/llm/: __init__.py  openai_adapter.py  quiz.py  stub.py  validator.py
commons/middleware/: __init__.py  circuit_breaker_mw.py  config_mw.py  error_handling_mw.py  instrumented_graph.py  logging_mw.py  metrics_mw.py  retry_mw.py  validation_mw.py
commons/node_validation/: __init__.py  handle_error.py  validator_decorator.py
commons/tool_client/: __init__.py  client.py  envelope.py  langchain_bridge.py  registry.py
conversation_engine/infrastructure/human/: __init__.py
conversation_engine/infrastructure/llm/: __init__.py
conversation_engine/infrastructure/middleware/: __init__.py
conversation_engine/infrastructure/node_validation/: __init__.py
conversation_engine/infrastructure/tool_client/: __init__.py  conversation_tools.py  project_graph_tools.py
data/classified_threads/: 27134f83-62c3-433b-bb48-0e64b7f1f8de.jsonl  bc3a0fd9-5d0f-4e0f-820d-bbea3f6edb8f.jsonl
data/fragments/: 27134f83-62c3-433b-bb48-0e64b7f1f8de.jsonl  a86a5eb2-5b57-4d46-9e1f-bb8fb479e22a.jsonl  bc3a0fd9-5d0f-4e0f-820d-bbea3f6edb8f.jsonl
data/insights/: insights_20260422_174718.jsonl
data/profile/: profile.json
data/replay/cc67eafa-1264-479c-89ff-2a6fd4e21a31_20260414-214227/: classified_threads.json  fragments.json  threads.json
data/replay/cc67eafa-1264-479c-89ff-2a6fd4e21a31_20260415-113649/: classified_threads.json  fragments.json  threads.json
data/replay/transcript_20260415-123726/: classified_threads.json  fragments.json
data/replay/transcript_20260416-080925/: classified_threads.json  fragments.json  (+1 more)
data/threads/: 108ce3b8-4987-4301-95ab-8b1c79943b19.jsonl  27134f83-62c3-433b-bb48-0e64b7f1f8de.jsonl  bc3a0fd9-5d0f-4e0f-820d-bbea3f6edb8f.jsonl  ffaf4436-18a1-41e8-961c-d4a24378687a.jsonl
data/transcripts/: 108ce3b8-4987-4301-95ab-8b1c79943b19.jsonl  13e053f6-6624-4778-94d7-c4e583be9172.jsonl  27134f83-62c3-433b-bb48-0e64b7f1f8de.jsonl  491d258c-9fa2-417f-b77b-5089fd0d55ea.jsonl  a86a5eb2-5b57-4d46-9e1f-bb8fb479e22a.jsonl  bc3a0fd9-5d0f-4e0f-820d-bbea3f6edb8f.jsonl  ca2c32ea-60b0-4a35-8e74-45f14b66b989.jsonl  d4d569d0-917c-4df3-b37f-bd7cfdb0e200.jsonl  ddde1040-6954-45a3-8058-3e8581622187.jsonl  ea23539c-7473-4cf2-8aca-31663115e88d.jsonl
design/: api-build-plan.md  components.md  phase10-reflective-memory.md  phase10.prompts.md  tutorial-plan.md  tutorial_original.md
journal-agent/: main.py  storage.py
journal_agent/: config_builder.py  llm_client.py  main.py  main_reflect.py  main_replay.py  model.py  settings.py
journal_agent/api/: main.py  models.py  streaming.py
journal_agent/comms/: human_chat.py  llm_client.py
journal_agent/configure/: config_builder.py  context_builder.py  prompts.py  score_card.py  settings.py  taxonomy.yaml
journal_agent/graph/: __init__.py  classifier.py  graph.py  journal_graph.py  node_tracer.py  reflection_graph.py  routing.py  state.py
journal_agent/model/: session.py
journal_agent/scripts/: seed_fragments.py
journal_agent/storage/: __init__.py  embedder.py  exchange_store.py  jsonl_gateway.py  pg_fragment_store.py  pg_gateway.py  pg_store.py  profile_store.py  repositories.py  storage.py  transcript_cache.py  vector_store.py  write_through.py
journal_agent/stores/: __init__.py  checkpointer.py  fragment_repo.py  insights_repo.py  pg_gateway.py
journal_agent/tests/: conftest.py  test_checkpointer.py  test_comms.py  test_context_builder.py  test_models.py  test_nodes.py  test_storage.py  test_streaming.py
journal_agent/transport/: queue.py
journal_chat_app/: README.md  index.html  package-lock.json  package.json  server.py  tailwind.config.js  vite.config.ts
journal_chat_app/src/: App.tsx  index.css
sql/: schema.sql
(+28 files in other folders)
