[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversation-agent"
version = "0.1.0"
description = "Conversational planning engine using LangGraph"
requires-python = ">=3.11"
authors = [
    {name = "Chris Lomeli"}
]
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=1.4.0",
    "pydantic-settings>=2.13.1",
    "openai>=1.0",
    "anthropic>=0.28",
    "langchain-ollama>=1.1.0",
    "pyyaml>=6.0",
    "chromadb>=1.5.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "nbconvert>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "bridge", "config", "domains", "resources", "sensors", "tools", "transport", "world"]

[tool.hatch.build.targets.wheel]
packages = ["journal_agent"]

[tool.pytest.ini_options]
testpaths = ["journal_agent/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
